# Ninethousand-Eighty-Four

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: meta.rs  mod.rs  mute.rs  set_streak.rs  settings.rs
src/events/: mod.rs  on_message.rs
src/util/: check.rs  database.rs  embeds.rs  misc.rs  mod.rs
