[package]
name = "ninethousand_eighty_four"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
regex = "1.5.4"
lazy_static = "1.4.0"
cityhash-rs = "1.0.1"

[dependencies.serenity]
default-features = false
version = "0.10.9"
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model",
    "framework",
    "cache",
    "standard_framework",
    "voice"
]

[dependencies.sqlx]
default-features = false
version = "0.5.7"
features = [ "runtime-tokio-rustls", "mysql", "macros"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]